# stat_calc

./: CMakeLists.txt  README.md  config.toml
examples/input/: 1set.csv  1trade2.csv  level.csv  trade.csv
examples/output/: stat_result.csv
src/: config_parser.hpp  csv_reader.cpp  csv_reader.hpp  main.cpp  statistic_calculator.cpp  statistic_calculator.hpp
tests/: test_config.cpp  test_csv_reader.cpp  test_integration.cpp  test_stats.cpp
